--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!-- ✅ Google / Schema.org Tags -->
-    <meta itemprop="name" content="Pankaj Joshi | Full Stack Developer Portfolio">
+    <meta itemprop="name" content="Pankaj Joshi ">
     <meta itemprop="description" content="Explore the portfolio and projects of Pankaj Joshi, a passionate full stack web developer based in India.">
     <meta itemprop="image" content="%PUBLIC_URL%/preview.png" />
 
