fixed the css problem of the techstack

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <meta property="og:title" content="Pankaj Joshi | Full Stack Developer Portfolio" />
     <meta property="og:description" content="Explore projects, skills, and experience of Pankaj Joshi, a React and Node.js developer." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://yourdomain.com" /> <!-- Update after hosting -->
+    <meta property="og:url" content="https://pankajjoshi.vercel.app/" /> <!-- Update after hosting -->
     <meta property="og:image" content="%PUBLIC_URL%/preview.png" />
 
     <!-- ✅ Twitter Meta Tags -->
